--- a/index.qmd
+++ b/index.qmd
@@ -1,14 +1,22 @@
 ---
-title: "Blog"
-listing:
-  contents: posts
-  sort: "date desc"
-  type: default
-  categories: true
-  sort-ui: false
-  filter-ui: false
+title: "Tom Baladrón"
+subtitle: "Psicometría y Psicología Clínica"
 page-layout: full
-title-block-banner: true
+title-block-banner: false
+toc: false
+about:
+  template: jolla
+  image: images/tom-avatar.png
 ---
 
+Hola! Soy Tom. Este es mi **sitio web personal**. Aquí podrás encontrar contenido sobre Psicometría/Análisis de Datos, tanto desde lo teórico como desde su puesta en escena en código; y sobre psicología clínica, específicamente teoría cognitivo conductual y neuropsicología (test psicológicos clínicos). Siéntete libre de explorar este sitio y [contactarme](mailto:tfbaladron@uc.cl) si tienes alguna sugerencia!
 
+👩‍💻 [sobre](about.qmd) (en construcción 🚧)
+
+📑 [posts del blog](posts/en.qmd) (en construcción 🚧)
+
+👩‍🏫 [libros](libros.qmd) (en construcción 🚧)
+
+📚 [Projetos](projects/index.qmd) (en construcción 🚧)
+
+🎓 [Artículos/Investigación](research/index.qmd) (en construcción 🚧)
